.deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dreamvo
  name: dreamvo
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: dreamvo
  template:
    metadata:
      labels:
        app: dreamvo
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - image: dreamvo/website@sha256:a6734e8b60d4fb62a558613315275627187da10027cdc20207efb35d9fbaa4aa
          name: dreamvo
          imagePullPolicy: Always
          args:
            - start
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 3
