.deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dreamvo
  name: dreamvo
spec:
  ports:
    - protocol: TCP
      targetPort: 3000
      port: 3000
  selector:
    app: dreamvo
