.deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dreamvo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    external-dns.alpha.kubernetes.io/hostname: "dreamvo.com.,www.dreamvo.com."
    external-dns.alpha.kubernetes.io/ttl: "3600"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header  X-Frame-Options SAMEORIGIN;
      add_header  X-Content-Type-Options nosniff;
      add_header  Referrer-Policy no-referrer;
spec:
  rules:
    - host: dreamvo.com
      http:
        paths:
          - backend:
              service:
                name: dreamvo
                port:
                  number: 3000
            path: /
            pathType: Prefix
    - host: www.dreamvo.com
      http:
        paths:
          - backend:
              service:
                name: dreamvo
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - dreamvo.com
        - www.dreamvo.com
      secretName: dreamvo-website-tls
